# anathema_space_battle

./: Cargo.toml  README.md
src/: api.rs  app.rs  game.rs  lib.rs  main.rs  router.rs
src/game/world/: mod.rs
src/pages/: lobby.rs  mod.rs  splash.rs  start.rs
templates/: app.aml  game.aml  router.aml
templates/pages/: lobby.aml  splash.aml  start.aml
